[gd_scene load_steps=3 format=3 uid="uid://vinx5kx7oofo"]

[ext_resource type="Script" uid="uid://bomkjc01lyknf" path="res://scripts/ui/ventana_ajustes.gd" id="1_kvycc"]
[ext_resource type="Script" uid="uid://cnqtowmnr7at6" path="res://scripts/ui/audio_settings.gd" id="2_4ymo1"]

[node name="VentanaAjustes" type="Window"]
title = "Ajustes"
initial_position = 1
size = Vector2i(900, 650)
transient = true
exclusive = true
unresizable = true
sharp_corners = true
min_size = Vector2i(900, 650)
script = ExtResource("1_kvycc")
metadata/_custom_type_script = "uid://bomkjc01lyknf"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 2

[node name="General" type="Control" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="Video" type="Control" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Audio" type="Control" parent="MarginContainer/VBoxContainer/TabContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("2_4ymo1")
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Volumen Musica" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer"]
layout_mode = 2
text = "Volumen de la musica"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer"]
layout_mode = 2

[node name="Minimo" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0%"

[node name="music_slider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="Maximo" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "100%"

[node name="Volumen SFX" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer"]
layout_mode = 2
text = "Volumen de los efectos (SFX)"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer"]
layout_mode = 2

[node name="Minimo" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "0%"

[node name="sfx_slider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="Maximo" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "100%"

[node name="Volumen general" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer"]
layout_mode = 2
text = "Volumen general"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer"]
layout_mode = 2

[node name="Minimo" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "0%"

[node name="master_slider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="Maximo" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "100%"

[node name="Controles" type="Control" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="aplicar_btn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 48)
layout_mode = 2
text = "Aplicar"

[node name="salir_btn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 48)
layout_mode = 2
text = "Volver"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/aplicar_btn" to="." method="_on_aplicar_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/salir_btn" to="." method="_on_salir_btn_pressed"]
